tests/NormalTests/paczka1/fuzzy1/62019713.err
Error in line 16: FSXhpSD S341 38,6
Error in line 12: hJd50Y S947 76,8
Error in line 25: FSXhpSD A710 72,0
Error in line 32: FSXhpSD S341 54,8
Error in line 19: VBDR2 A619 53,9
